# TeMatch

./: CMakeLists.txt  README.md  evaluation.py
dataset/: convert.ipynb  dataConvert.py
include/: common.h  config.h  dataloader.h  graph.h  pathtree.h  pattern.h  schedule.h  tegraph.h  tepattern.h  vertex_set.h
src/: CMakeLists.txt  common.cpp  dataloader.cpp  graph.cpp  pathtree.cpp  pattern.cpp  schedule.cpp  tegraph.cpp  tepattern.cpp  vertex_set.cpp
tianhe/: CMakeLists.txt  baseline_test.cpp  tcs_memory.cpp  test.cpp  unitTest.cpp
